--- a/style.css
+++ b/style.css
@@ -549,7 +549,7 @@ header {
 }
 
 .gallery-img {
-    background: url('./Images/Gallery/4.jpeg');
+    background: url('./Images/Gallery/1.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     height: 344.8px;
